--- a/styles.css
+++ b/styles.css
@@ -211,7 +211,7 @@ input[type="number"] {
 
 .clock-btn {
     background-color: #20B2AA; /* Light sea green */
-    color: #FF4500; /* Orange red */
+    color: #4B0082; /* Orange red */
 }
 
 .math-btn:hover {
