--- a/styles.css
+++ b/styles.css
@@ -229,6 +229,15 @@ input[type="number"] {
     color: #4B0082; /* Indigo color */
 }
 
+.fractions-btn {
+    background-color: #8447ff; /* Tomato color */
+    color: #dfdfdf; /* Indigo color */
+}
+.fractions-btn:hover {
+    background-color: #7700ff; /* Orange red */
+    color: #dfdfdf; /* Indigo color */
+}
+
 @keyframes bounce {
     0%, 20%, 50%, 80%, 100% {
         transform: translateY(0);
@@ -350,6 +359,6 @@ h1, h2 {
 #shapeCanvas {
     display: block;
     margin: 20px auto;
-    border: 1px solid #ddd;
+    /* border: 1px solid #ddd; */
 }
 
