--- a/styles.css
+++ b/styles.css
@@ -397,3 +397,30 @@ input[type="radio"]:checked + label {
     background-color: #FF6347;
     color: #FFF;
 }
+
+.fraction-input {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    justify-content: center;
+    margin: 20px 0;
+}
+
+.fraction-part {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.fraction-part hr {
+    width: 100%;
+    margin: 5px 0;
+}
+
+.fraction-part input {
+    width: 60px;
+}
+
+#wholeNumber {
+    width: 60px;
+}
