--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,21 +1,14 @@
 <div class="splash-container">
-    <h1>🎉 Welcome to Learning Activities 🎉</h1>
-    <p>Select an activity to start:</p>
-    <div class="activity-buttons">
-        <a href="/ar-alpha" class="activity-btn ar-alpha-btn">أ ب ت</a>
-        <br>
-        <a href="/math" class="activity-btn math-btn">✖️ Math</a>
-        <br>
-        <a href="/fraction" class="activity-btn fraction-btn">➕ Fraction Math ➕</a>
-        <br>
-        <a href="/clock" class="activity-btn clock-btn">🕰️ Clock</a>
-        <br>
-        <a href="/operations" class="activity-btn operations-btn"> < Operations</a>
-        <br>
-        <a href="/fractions" class="activity-btn fractions-btn"> 1/2 Fractions</a>
-        <br>
-        <a href="/words" class="activity-btn words-btn">Words</a>
-        <br>
-        <a href="/long-division" class="activity-btn long-division-btn">➗ Long Division</a>
+    <h1>🎊 Welcome to Learning Activities 🎊</h1>
+    <p class="intro-text">Select an activity to start:</p>
+    <div class="activity-stack">
+        <a href="/ar-alpha" class="stack-btn ar-alpha-btn">أ ب ت</a>
+        <a href="/math" class="stack-btn math-btn">✖️ MATH</a>
+        <a href="/fraction" class="stack-btn fraction-btn">➕ FRACTION MATH ➕</a>
+        <a href="/clock" class="stack-btn clock-btn">🕰️ CLOCK</a>
+        <a href="/operations" class="stack-btn operations-btn">< OPERATIONS</a>
+        <a href="/fractions" class="stack-btn fractions-btn">1/2 FRACTIONS</a>
+        <a href="/words" class="stack-btn words-btn">WORDS</a>
+        <a href="/long-division" class="stack-btn long-division-btn">➗ LONG DIVISION</a>
     </div>
 </div> 
