--- a/views/ar-alpha.ejs
+++ b/views/ar-alpha.ejs
@@ -1,7 +1,5 @@
 <div class="container">
-    <div class="header">
-        <a href="/" class="backLink">Home</a>
-    </div>
+    <%- include('partials/header', { showScore: false }) %>
     <h1>📚 تعلم الحروف العربية 📚</h1>
     <div dir="rtl">
         <span><input type="radio" id="sorted" name="letterType" value="sorted" checked> <label for="sorted">مرتب</label></span>
@@ -10,8 +8,9 @@
         <span><input type="checkbox" id="singleLetter" name="singleLetter" checked> <label for="singleLetter">حرف منفرد</label></span>
     </div>
     <h1 id="question"></h1>
-    <br/>
-    <button id="newQuestion">التالي</button>
+    <div class="button-container">
+        <button id="newQuestion">التالي</button>
+    </div>
 </div>
 
 <style>
