--- a/views/fraction.ejs
+++ b/views/fraction.ejs
@@ -1,7 +1,5 @@
 <div id="settings" class="container">
-    <div class="header">
-        <a href="/" class="backLink">Home</a>
-    </div>
+    <%- include('partials/header', { showScore: false }) %>
     <h2>Fraction Practice</h2>
     
     <label>
@@ -17,14 +15,13 @@
     </label>
     <br><br>
 
-    <button id="startButton">Start</button>
+    <div class="button-container">
+        <button id="startButton">Start</button>
+    </div>
 </div>
 
 <div id="game" class="container">
-    <div class="header">
-        <a href="#" class="backLink">Back</a>
-        <p id="score">Score: 0/0</p>
-    </div>
+    <%- include('partials/header', { backLink: '#', backText: 'Back' }) %>
     <h1 id="question"></h1>
     <div id="answerInputs">
         <div class="fraction-input">
@@ -37,16 +34,12 @@
         </div>
     </div>
     <br/>
-    <button id="submitAnswer">Submit</button>
-    <button id="newQuestion">New Question</button>
-    <p id="feedback"></p>
-    <a href="#" id="logs">Logs</a>
-    <div id="logsModal" class="modal">
-        <div class="modal-content">
-            <h2>Logs</h2>
-            <p id="logsContent"></p>
-        </div>
+    <div class="button-container">
+        <button id="submitAnswer">Submit</button>
+        <button id="newQuestion">New Question</button>
     </div>
+    <%- include('partials/feedback') %>
+    <%- include('partials/logs') %>
 </div>
 
 <%- contentFor('scripts') %>
