--- a/views/fractions.ejs
+++ b/views/fractions.ejs
@@ -1,17 +1,18 @@
 <div class="container">
-    <div class="header">
-        <a href="/" class="backLink">Home</a>
-        <p id="score">Score: 0/0</p>
-    </div>
-    <h2>Fraction Practice</h2>
-    <canvas id="shapeCanvas" width="300" height="300"></canvas>
-    <div class="input-section">
-        <input type="text" id="answer" placeholder="e.g. 1/2">
-        <button id="submitAnswer">Submit</button>
-        <button id="newQuestion">New Question</button>
-    </div>
-    <p id="feedback"></p>
+    <%- include('partials/header') %>
+        <h2>Fraction Practice</h2>
+        <div id="question">
+            <canvas id="shapeCanvas" width="300" height="300"></canvas>
+        </div>
+        <div class="input-section" id="answerInputs">
+            <input type="text" id="answer" placeholder="e.g. 1/2">
+            <div class="button-container">
+                <button id="submitAnswer">Submit</button>
+                <button id="newQuestion">New Question</button>
+            </div>
+        </div>
+        <%- include('partials/feedback') %>
 </div>
 
 <%- contentFor('scripts') %>
-<script src="/js/fractions.js"></script> 
+    <script src="/js/fractions.js"></script>
