--- a/views/words.ejs
+++ b/views/words.ejs
@@ -1,8 +1,5 @@
-<div class="container">
-    <div class="header">
-        <a href="/" class="backLink">Home</a>
-        <p id="score">Score: 0/0</p>
-    </div>
+<div class="container" id="words">
+    <%- include('partials/header') %>
     <h1>📚 Let's Learn Words 📚</h1>
     <div>
         <span><input type="radio" id="Numbers" name="wordType" value="Numbers" checked> <label for="Numbers">Numbers</label></span>
@@ -15,7 +12,9 @@
     </div>
     <h1 id="question"></h1>
     <br/>
-    <button id="newQuestion">Next Word</button>
+    <div class="button-container">
+        <button id="newQuestion">Next Word</button>
+    </div>
 </div>
 
 <%- contentFor('scripts') %>
