--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,5 +10,6 @@
         <a href="/fractions" class="stack-btn fractions-btn">1/2 FRACTIONS</a>
         <a href="/words" class="stack-btn words-btn">WORDS</a>
         <a href="/long-division" class="stack-btn long-division-btn">➗ LONG DIVISION</a>
+        <a href="/before-after" class="stack-btn before-after-btn">Before OR After</a>
     </div>
 </div> 
