--- a/views/fraction.ejs
+++ b/views/fraction.ejs
@@ -13,6 +13,9 @@
     <label class="checkboxLabel">
         <input type="checkbox" id="allowMixedNumbers"> <span>Allow Mixed Numbers (e.g., 1 2/3)</span>
     </label>
+    <label class="checkboxLabel">
+        <input type="checkbox" id="sameDenominator"> <span>Same denominator</span>
+    </label>
     <br><br>
 
     <div class="button-container">
