--- a/views/fraction.ejs
+++ b/views/fraction.ejs
@@ -16,6 +16,9 @@
     <label class="checkboxLabel">
         <input type="checkbox" id="sameDenominator"> <span>Same denominator</span>
     </label>
+    <label class="checkboxLabel">
+        <input type="checkbox" id="allowNegativeResults"> <span>Allow Negative Results</span>
+    </label> 
     <br><br>
 
     <div class="button-container">
