--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,5 +11,6 @@
         <a href="/words" class="stack-btn words-btn">WORDS</a>
         <a href="/long-division" class="stack-btn long-division-btn">➗ LONG DIVISION</a>
         <a href="/before-after" class="stack-btn before-after-btn">Before OR After</a>
+        <a href="/sort" class="stack-btn sort-btn">🔢 SORT PAGE</a>
     </div>
 </div> 
