Add back button functionality to settings in sort.js and update back link in sort.ejs

--- a/views/sort.ejs
+++ b/views/sort.ejs
@@ -18,7 +18,7 @@
 </div>
 
 <div id="game" class="container" style="display:none;">
-    <%- include('partials/header', { backLink: '#', backText: 'Back' }) %>
+    <%- include('partials/header', { backLink: '#settings', backText: 'Back' }) %>
     <h1 id="question"></h1>
     <div id="answerInputs">
         <input type="text" id="answer" placeholder="Enter numbers separated by commas">
