--- a/views/before-after.ejs
+++ b/views/before-after.ejs
@@ -16,8 +16,8 @@
     </div>
 </div>
 
-<div id="game" class="container">
-    <%- include('partials/header', { backLink: '#', backText: 'Back' }) %>
+<div id="game" class="container" style="display:none;">
+    <%- include('partials/header', { backLink: '#settings', backText: 'Back' }) %>
     <h1 id="question"></h1>
     <div id="answerInputs">
         <input type="number" id="answer">
